crates/toml/tests/snapshots/invalid/string/no-open-02.stderr
TOML parse error at line 1, column 7
  |
1 | a = [a"]
  |       ^
missing comma between array elements, expected `,`

---
TOML parse error at line 1, column 10
  |
1 | a = [a"]
  |          ^
unclosed array, expected `]`

---
TOML parse error at line 1, column 6
  |
1 | a = [a"]
  |      ^
string values must be quoted, expected literal string

---
TOML parse error at line 1, column 9
  |
1 | a = [a"]
  |         ^
invalid basic string, expected `"`
